# robot-swarms-need-blockchain-classical

./: README.md  create_template.sh  global_config.sh  robot1opinion.txt  run_experiment.sh  start_experiment1.sh  start_experiment2.sh
contracts/: smart_contract_byzantine_template.sol
controllers/: CMakeLists.txt  epuck_environment_classification.cpp  epuck_environment_classification.h  helpers.cpp  helpers.h
controllers/epuck_environment_classification/: .epuck_environment_classification.cpp.swp  epuck_environment_classification.cpp  epuck_environment_classification.h  myci_epuck_range_and_bearing_actuator.cpp  myci_epuck_range_and_bearing_actuator.h  myci_epuck_range_and_bearing_sensor.cpp  myci_epuck_range_and_bearing_sensor.h
evaluation/: *R*  .Rhistory  1_Plain.R  2_Binary.R  3_Threshold.R  4_Threshold_Byzantine.R  5_Byzantine.R  6_Byzantine_Binary.R  7_Sybil.R  README.md  aggregate_runs.R  create_plots.R  myplothelpers.R  outtakes.R  testMean.R
experiments/: config10.txt  config11.txt  config2.txt  config3.txt  config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt  create_genesis.py  epuck.argos  epuck0.argos  epuck1.argos  epuck10.argos  epuck11.argos  epuck2.argos  epuck3.argos  epuck4.argos  epuck5.argos  epuck6.argos  epuck7.argos  epuck8.argos  epuck9.argos  epuck_EC_locale_template.argos
loop_functions/: CMakeLists.txt  environment_classification_loop_function.cpp  environment_classification_loop_function.h
scripts/: test
starters/: 10_Binary_Big.sh  11_Regular_2nd.sh  1_Plain.sh  1_plain.sh  2_Binary.sh  3_Threshold.sh  (+6 more)
(+6705 files in other folders)
